[package]
name = "tls-tunnel"
version = "0.1.0"
authors = ["shane <shane@evervault.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
lazy_static = "1.4.0"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "io-util", "net"] }
tokio-rustls = "0.22.0"
webpki = "0.21.0"
webpki-roots = "0.21.0"
