[package]
name = "tls-tunnel"
version = "0.1.2"
authors = ["Shane Curran <shane@curran.ie>"]
description = "Rust TLS over TCP tunnel"
edition = "2018"
license = "MIT"
repository = "https://github.com/shanecurran/tls-tunnel"
readme = "README.md"

[dependencies]
futures = "0.3.15"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "io-util", "net"] }
tokio-rustls = "0.22.0"
url = "2.2.2"
webpki = "0.21.0"
webpki-roots = "0.21.0"
